// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator Tests An ActivityIndicator can have custom colors 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-color",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              30,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          103,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          30,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              30.000022888183594,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          315,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          30.000022888183594,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              30,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          528,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          30,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              30,
              30,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          740,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          30,
          30,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "activity-color",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      54.00004577636719,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have custom colors and large sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-large-color",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              54,
              54,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          91,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          54,
          54,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              54.000022888183594,
              54,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          303,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          54.000022888183594,
          54,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              54,
              54,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          516,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          54,
          54,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              54,
              54,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          728,
          12,
          0,
        ],
        "Opacity": 1,
        "Size": [
          54,
          54,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "activity-large-color",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      873,
      78,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have custom sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-size",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-size",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      54,
      54,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have large sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-large",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-large",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      54,
      54,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have styling 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-gray",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-gray",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      30,
      30,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have toggle animation 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-toggle",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-toggle",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      54,
      54,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can render 1`] = `
{
  "Automation Tree": {
    "AutomationId": "default_activity_indicator",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "Wait for content to load!",
  },
  "Visual Tree": {
    "Comment": "default_activity_indicator",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      30,
      30,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
